tests/baselines/reference/undefinedTypeAssignment4.errors.txt
undefinedTypeAssignment4.ts(1,7): error TS2414: Class name cannot be 'undefined'.
undefinedTypeAssignment4.ts(4,11): error TS2427: Interface name cannot be 'undefined'.


==== undefinedTypeAssignment4.ts (2 errors) ====
    class undefined {
          ~~~~~~~~~
!!! error TS2414: Class name cannot be 'undefined'.
    	foo: string;
    }
    interface undefined {
              ~~~~~~~~~
!!! error TS2427: Interface name cannot be 'undefined'.
    	member: number;
    }
    namespace undefined {
    	export var x = 42;
    }
    var x: undefined;
    var y: typeof undefined;
    